# ping-me-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bucket.db
.sqlx/: query-13ee335bba1cda1c88f2ab0d3c045650228fa0603dc453bd102dd0be40aec95f.json  query-1485e17cd4f4963edebc47468192a3bdfe829357ab3ee7f8123478852ebd3aa9.json  query-20fd4ee5720ba7ea4d8f828ba023f447ee2c701e171ab81314ee36f726ea307f.json  query-2c9f4f0dc5f36569c6b9b23321a3ecb029785551af10499a4972bd7643bfbb96.json  query-2ebba6a4b1b63f13b839a9dee51e4e7ec51ec2475e50521b17356f0a949a39e5.json  query-4be4935f1030715b4f70dfc4086813b3176ca13534065f51013bfa5e3ee68718.json  query-551bd588a04d8433f6cb2ec9c5b8e4d2a45a9bbcfeb6027d77ee58f734c58861.json  query-5eed18520022acc1923ac32d1e1fac069c19a72bb79eb89e320d928617c63a47.json  query-6f31e160577e38d9c90770677577d0ee45d3a91e8c499419ca31b4dd318def9c.json  query-79a5e88abb3d219c7e9c346b4c99497b1e028531d3eb89cce06044a1452d3847.json  query-7cbd0d5c2590d709c0140b628967f59b1193539fca01a3748d24c5eff881918b.json  query-af668137209fb4016e06217047bc116c6928306748b5c0c371ec6a798bdacf45.json  query-c686618f5e143ba26d123d4c6e156a52d9b35816933fe1943d7dac797387b184.json  query-cbf180765e70d2287fe57408aa2ef10e0dbbf3431188ca14eaea138c300c9d20.json  query-d6623c5afb4194dabb948bf30baeaae70d72a8750ea97118a3e0ea31154e75cd.json  query-e5cd20a2b408c12685a960c229def80ad78565c54824c6d45a19b2e744af6b6b.json  query-f0f2c827e74f7fec8d1b3ed1e525b1a21cf626d41059a8f49185085703d30fe9.json  query-fbfdbc40a3a51e1b3202d98b37ac7c40264dbd764c0824af3253ba61c708dcad.json
migrations/: 20230630031555_init.sql
src/: auth.rs  discord.rs  errors.rs  main.rs
src/routes/: admin_routes.rs  auth_routes.rs  bucket_routes.rs  buckets_routes.rs  health_routes.rs  mod.rs  notify_routes.rs  search_routes.rs  user_routes.rs
