[package]
name = "mert-bucket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.17", features = ["multipart"] }
chrono = "*"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1.11", features = ["fs"] }
tracing = "0.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }