[package]
name = "mert-bucket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
axum-macros = "0.3.7"
axum-extra = "0.7.4"
dotenvy = "0.15.6"
chrono = "*"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1.11", features = ["fs"] }
tracing = "0.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
axum-login = {version = "0.5.0", features = ["sqlite"]}
oauth2 = "4.2.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]